<resources>
    <string name="app_name">Banshi Software</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="i_forgot_password"><u>I forgot password?</u></string>
    <string name="i_have_account_back_to_login">I have account? Back to login</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_dob">Select Dob</string>
    <string name="enter_emergency_mobile_number">Enter Emergency Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="sign_u_p">Sign Up</string>
    <string name="confirm">Confirm</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="new_password">New Password</string>
    <string name="create_new_password">Create New\nPassword</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_the_email_associated_with_your_account_and_we_ll_send_an_email_with_instructions_to_reset_your_password">Enter the email associated with your account and we\'ll send an email with instructions to reset your password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="send">Send</string>
    <string name="i_remembered_my_password_return_to_login">I remembered my password return to login</string>
    <string name="i_don_t_have_an_account_create"><u>I don\'t have an account? Create</u></string>
    <string name="sign_in">Sign In</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_your_mobile_number">Enter Mobile Number</string>
    <string name="emergency_mobile_number">Emergency Mobile Number</string>
    <string name="address">Address</string>
    <string name="pincode">PinCode</string>
    <string name="enter_your_pincode">Enter Your PinCode</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="create_an_account_to_continue">Create an account to continue!</string>
    <string name="let_s_sign_you_in">Let’s Sign You In</string>
    <string name="at_least_8_characters_with_uppercase_and_lowercase_letters">At least 8 characters, with uppercase and lowercase letters</string>
    <string name="start_camera_failed">Start Camera Failed</string>
    <string name="cancel">Cancel</string>
    <string name="save">SAVE</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="android_developer">Android Developer</string>
    <string name="ok">Ok</string>
    <string name="absent">Absent</string>
    <string name="sample_task">Sample Task</string>
    <string name="_1">1.</string>
    <string name="_20_03_22">20-03-22</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="_25_03_22">25-03-22</string>
    <string name="i_will_be_absent_today_due_to_some_personal_urgent_work_poped_up_all_of_a_sudden">i will be absent today due to some personal urgent work ,poped up all of a sudden</string>
    <string name="todo">TODO</string>
    <string name="we">-</string>
    <string name="urgent_piece_of_work">Urgent piece of work</string>
    <string name="todoo">TODoo</string>
    <string name="total">Total</string>
    <string name="all_the_description_related_to_the_title_will_be_here_all_the_description_related_to_the_title_will_be_here">All the description related to the title will be here .All the description related to the title will be here.</string>
    <string name="time">Time</string>
    <string name="casual_leave">Casual leave</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="oh_no">Oh no!</string>
    <string name="wifi">wifi</string>
    <string name="loan_title">Loan Title</string>
    <string name="_1000">1000</string>
    <string name="_10000">10000</string>
    <string name="_10">10</string>
    <string name="m">M</string>
    <string name="slash">/-</string>
    <string name="emi">EMI</string>
</resources>