<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/edit_text_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/wifi"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:contentDescription="@string/wifi"
                android:src="@drawable/ic_baseline_wifi_off_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/paymentStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/m_medium"
                android:gravity="center"
                android:text="@string/oh_no"
                android:textColor="@color/_A8A8A8"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wifi" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/m_medium"
                android:gravity="center"
                android:text="@string/no_internet_connection"
                android:textColor="@color/_A8A8A8"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/paymentStatus" />

            <Button
                android:id="@+id/setting"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/light_green_15r_bg"
                android:fontFamily="@font/m_medium"
                android:paddingStart="@dimen/_20sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/setting"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ok"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <Button
                android:id="@+id/ok"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/light_green_15r_bg"
                android:fontFamily="@font/m_medium"
                android:paddingStart="@dimen/_20sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="@+id/setting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/setting"
                app:layout_constraintTop_toTopOf="@+id/setting" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>